k8s/file-handling-pod.yaml
# start with kubectl apply -f <filename>
# test of the repository connectivity
# env variables are not passed, it doesn't run correctly
# the goal was to have it start up
apiVersion: v1
kind: Pod
metadata:
  name: file-handling
  labels:
    app: test
  
spec:
  containers:
  - name: file-handling
    image: europe-west4-docker.pkg.dev/codehub-400314/code-hub-main/file-handling:latest
    resources:
      limits:
        cpu: "1"
        memory: "512Mi"
      requests:
        cpu: "500m"
        memory: "256Mi"
