k8s/sample-pod.yaml
# a sample pod for debug
# start with kubectl apply -f <filename>
apiVersion: v1
kind: Pod
metadata:
  name: myjob
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
