k8s/solution-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution
  namespace: solution
  labels:
    app: solution

spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution
  template:
    metadata:
      labels:
        app: solution
      namespace: solution
    spec:
      serviceAccountName: solution
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: solution
          image: europe-west4-docker.pkg.dev/codehub-400314/code-hub-main/solution:latest
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: solution-service
  namespace: solution
spec:
  selector:
    app: solution
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
