k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: user
  labels:
    app: user

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
      namespace: user
    spec:
      serviceAccountName: user
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: solution
          image: europe-west4-docker.pkg.dev/codehub-400314/code-hub-main/user:latest
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
