k8s/testingress.yaml
# sample ingress to serve the test service's web service
# takes a minute or two to start up
# start with kubectl apply -f <filename>
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress 
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: myjob
      port:
        number: 80
